Thesis/src/extractedTestGrammar/ExtractedIRIParser.java
// Generated from ExtractedIRI.g4 by ANTLR 4.1
package extractedTestGrammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ExtractedIRIParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		UCSCHAR=1, IPRIVATE=2, D0=3, D1=4, D2=5, D3=6, D4=7, D5=8, D6=9, D7=10, 
		D8=11, D9=12, A=13, B=14, C=15, D=16, E=17, F=18, G=19, H=20, I=21, J=22, 
		K=23, L=24, M=25, N=26, O=27, P=28, Q=29, R=30, S=31, T=32, U=33, V=34, 
		W=35, X=36, Y=37, Z=38, COL2=39, COL=40, DOT=41, PERCENT=42, HYPHEN=43, 
		TILDE=44, USCORE=45, EXCL=46, DOLLAR=47, AMP=48, SQUOTE=49, OPAREN=50, 
		CPAREN=51, STAR=52, PLUS=53, COMMA=54, SCOL=55, EQUALS=56, FSLASH2=57, 
		FSLASH=58, QMARK=59, HASH=60, OBRACK=61, CBRACK=62, AT=63;
	public static final String[] tokenNames = {
		"<INVALID>", "UCSCHAR", "IPRIVATE", "'0'", "'1'", "'2'", "'3'", "'4'", 
		"'5'", "'6'", "'7'", "'8'", "'9'", "'a'", "'b'", "'c'", "'d'", "'e'", 
		"'f'", "'g'", "'h'", "'i'", "'j'", "'k'", "'l'", "'m'", "'n'", "'o'", 
		"'p'", "'q'", "'r'", "'s'", "'t'", "'u'", "'v'", "'w'", "'x'", "'y'", 
		"'z'", "'::'", "':'", "'.'", "'%'", "'-'", "'~'", "'_'", "'!'", "'$'", 
		"'&'", "'''", "'('", "')'", "'*'", "'+'", "','", "';'", "'='", "'//'", 
		"'/'", "'?'", "'#'", "'['", "']'", "'@'"
	};
	public static final int
		RULE_parse = 0, RULE_iri = 1, RULE_ihier_part = 2, RULE_iri_reference = 3, 
		RULE_absolute_iri = 4, RULE_irelative_ref = 5, RULE_irelative_part = 6, 
		RULE_iauthority = 7, RULE_iuserinfo = 8, RULE_ihost = 9, RULE_ireg_name = 10, 
		RULE_ipath = 11, RULE_ipath_abempty = 12, RULE_ipath_absolute = 13, RULE_ipath_noscheme = 14, 
		RULE_ipath_rootless = 15, RULE_ipath_empty = 16, RULE_isegment = 17, RULE_isegment_nz = 18, 
		RULE_isegment_nz_nc = 19, RULE_ipchar = 20, RULE_iquery = 21, RULE_ifragment = 22, 
		RULE_iunreserved = 23, RULE_scheme = 24, RULE_port = 25, RULE_ip_literal = 26, 
		RULE_ip_v_future = 27, RULE_ip_v6_address = 28, RULE_h16 = 29, RULE_ls32 = 30, 
		RULE_ip_v4_address = 31, RULE_dec_octet = 32, RULE_pct_encoded = 33, RULE_unreserved = 34, 
		RULE_reserved = 35, RULE_gen_delims = 36, RULE_sub_delims = 37, RULE_alpha = 38, 
		RULE_hexdig = 39, RULE_digit = 40, RULE_non_zero_digit = 41;
	public static final String[] ruleNames = {
		"parse", "iri", "ihier_part", "iri_reference", "absolute_iri", "irelative_ref", 
		"irelative_part", "iauthority", "iuserinfo", "ihost", "ireg_name", "ipath", 
		"ipath_abempty", "ipath_absolute", "ipath_noscheme", "ipath_rootless", 
		"ipath_empty", "isegment", "isegment_nz", "isegment_nz_nc", "ipchar", 
		"iquery", "ifragment", "iunreserved", "scheme", "port", "ip_literal", 
		"ip_v_future", "ip_v6_address", "h16", "ls32", "ip_v4_address", "dec_octet", 
		"pct_encoded", "unreserved", "reserved", "gen_delims", "sub_delims", "alpha", 
		"hexdig", "digit", "non_zero_digit"
	};

	@Override
	public String getGrammarFileName() { return "ExtractedIRI.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public ExtractedIRIParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ParseContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ExtractedIRIParser.EOF, 0); }
		public IriContext iri() {
			return getRuleContext(IriContext.class,0);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExtractedIRIListener ) ((ExtractedIRIListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExtractedIRIListener ) ((ExtractedIRIListener)listener).exitParse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExtractedIRIVisitor ) return ((ExtractedIRIVisitor<? extends T>)visitor).visitParse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84); iri();
			setState(85); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IriContext extends ParserRuleContext {
		public IqueryContext iquery() {
			return getRuleContext(IqueryContext.class,0);
		}
		public Ihier_partContext ihier_part() {
			return getRuleContext(Ihier_partContext.class,0);
		}
		public IfragmentContext ifragment() {
			return getRuleContext(IfragmentContext.class,0);
		}
		public SchemeContext scheme() {
			return getRuleContext(SchemeContext.class,0);
		}
		public IriContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_iri; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExtractedIRIListener ) ((ExtractedIRIListener)listener).enterIri(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExtractedIRIListener ) ((ExtractedIRIListener)listener).exitIri(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExtractedIRIVisitor ) return ((ExtractedIRIVisitor<? extends T>)visitor).visitIri(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IriContext iri() throws RecognitionException {
		IriContext _localctx = new IriContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_iri);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87); scheme();
			setState(88); match(COL);
			setState(89); ihier_part();
			setState(92);
			_la = _input.LA(1);
			if (_la==QMARK) {
				{
				setState(90); match(QMARK);
				setState(91); iquery();
				}
			}

			setState(96);
			_la = _input.LA(1);
			if (_la==HASH) {
				{
				setState(94); match(HASH);
				setState(95); ifragment();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Ihier_partContext extends ParserRuleContext {
		public Ipath_emptyContext ipath_empty() {
			return getRuleContext(Ipath_emptyContext.class,0);
		}
		public Ipath_abemptyContext ipath_abempty() {
			return getRuleContext(Ipath_abemptyContext.class,0);
		}
		public Ipath_rootlessContext ipath_rootless() {
			return getRuleContext(Ipath_rootlessContext.class,0);
		}
		public Ipath_absoluteContext ipath_absolute() {
			return getRuleContext(Ipath_absoluteContext.class,0);
		}
		public IauthorityContext iauthority() {
			return getRuleContext(IauthorityContext.class,0);
		}
		public Ihier_partContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ihier_part; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExtractedIRIListener ) ((ExtractedIRIListener)listener).enterIhier_part(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExtractedIRIListener ) ((ExtractedIRIListener)listener).exitIhier_part(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExtractedIRIVisitor ) return ((ExtractedIRIVisitor<? extends T>)visitor).visitIhier_part(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Ihier_partContext ihier_part() throws RecognitionException {
		Ihier_partContext _localctx = new Ihier_partContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_ihier_part);
		try {
			setState(105);
			switch (_input.LA(1)) {
			case FSLASH2:
				enterOuterAlt(_localctx, 1);
				{
				setState(98); match(FSLASH2);
				setState(99); iauthority();
				setState(100); ipath_abempty();
				}
				break;
			case FSLASH:
				enterOuterAlt(_localctx, 2);
				{
				setState(102); ipath_absolute();
				}
				break;
			case UCSCHAR:
			case D0:
			case D1:
			case D2:
			case D3:
			case D4:
			case D5:
			case D6:
			case D7:
			case D8:
			case D9:
			case A:
			case B:
			case C:
			case D:
			case E:
			case F:
			case G:
			case H:
			case I:
			case J:
			case K:
			case L:
			case M:
			case N:
			case O:
			case P:
			case Q:
			case R:
			case S:
			case T:
			case U:
			case V:
			case W:
			case X:
			case Y:
			case Z:
			case COL:
			case DOT:
			case PERCENT:
			case HYPHEN:
			case TILDE:
			case USCORE:
			case EXCL:
			case DOLLAR:
			case AMP:
			case SQUOTE:
			case OPAREN:
			case CPAREN:
			case STAR:
			case PLUS:
			case COMMA:
			case SCOL:
			case EQUALS:
			case AT:
				enterOuterAlt(_localctx, 3);
				{
				setState(103); ipath_rootless();
				}
				break;
			case EOF:
			case QMARK:
			case HASH:
				enterOuterAlt(_localctx, 4);
				{
				setState(104); ipath_empty();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Iri_referenceContext extends ParserRuleContext {
		public Irelative_refContext irelative_ref() {
			return getRuleContext(Irelative_refContext.class,0);
		}
		public IriContext iri() {
			return getRuleContext(IriContext.class,0);
		}
		public Iri_referenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_iri_reference; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExtractedIRIListener ) ((ExtractedIRIListener)listener).enterIri_reference(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExtractedIRIListener ) ((ExtractedIRIListener)listener).exitIri_reference(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExtractedIRIVisitor ) return ((ExtractedIRIVisitor<? extends T>)visitor).visitIri_reference(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Iri_referenceContext iri_reference() throws RecognitionException {
		Iri_referenceContext _localctx = new Iri_referenceContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_iri_reference);
		try {
			setState(109);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(107); iri();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(108); irelative_ref();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Absolute_iriContext extends ParserRuleContext {
		public IqueryContext iquery() {
			return getRuleContext(IqueryContext.class,0);
		}
		public Ihier_partContext ihier_part() {
			return getRuleContext(Ihier_partContext.class,0);
		}
		public SchemeContext scheme() {
			return getRuleContext(SchemeContext.class,0);
		}
		public Absolute_iriContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_absolute_iri; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExtractedIRIListener ) ((ExtractedIRIListener)listener).enterAbsolute_iri(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExtractedIRIListener ) ((ExtractedIRIListener)listener).exitAbsolute_iri(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExtractedIRIVisitor ) return ((ExtractedIRIVisitor<? extends T>)visitor).visitAbsolute_iri(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Absolute_iriContext absolute_iri() throws RecognitionException {
		Absolute_iriContext _localctx = new Absolute_iriContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_absolute_iri);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111); scheme();
			setState(112); match(COL);
			setState(113); ihier_part();
			setState(116);
			_la = _input.LA(1);
			if (_la==QMARK) {
				{
				setState(114); match(QMARK);
				setState(115); iquery();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Irelative_refContext extends ParserRuleContext {
		public IqueryContext iquery() {
			return getRuleContext(IqueryContext.class,0);
		}
		public Irelative_partContext irelative_part() {
			return getRuleContext(Irelative_partContext.class,0);
		}
		public IfragmentContext ifragment() {
			return getRuleContext(IfragmentContext.class,0);
		}
		public Irelative_refContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_irelative_ref; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExtractedIRIListener ) ((ExtractedIRIListener)listener).enterIrelative_ref(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExtractedIRIListener ) ((ExtractedIRIListener)listener).exitIrelative_ref(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExtractedIRIVisitor ) return ((ExtractedIRIVisitor<? extends T>)visitor).visitIrelative_ref(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Irelative_refContext irelative_ref() throws RecognitionException {
		Irelative_refContext _localctx = new Irelative_refContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_irelative_ref);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118); irelative_part();
			setState(121);
			_la = _input.LA(1);
			if (_la==QMARK) {
				{
				setState(119); match(QMARK);
				setState(120); iquery();
				}
			}

			setState(125);
			_la = _input.LA(1);
			if (_la==HASH) {
				{
				setState(123); match(HASH);
				setState(124); ifragment();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Irelative_partContext extends ParserRuleContext {
		public Ipath_emptyContext ipath_empty() {
			return getRuleContext(Ipath_emptyContext.class,0);
		}
		public Ipath_abemptyContext ipath_abempty() {
			return getRuleContext(Ipath_abemptyContext.class,0);
		}
		public Ipath_noschemeContext ipath_noscheme() {
			return getRuleContext(Ipath_noschemeContext.class,0);
		}
		public Ipath_absoluteContext ipath_absolute() {
			return getRuleContext(Ipath_absoluteContext.class,0);
		}
		public IauthorityContext iauthority() {
			return getRuleContext(IauthorityContext.class,0);
		}
		public Irelative_partContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_irelative_part; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExtractedIRIListener ) ((ExtractedIRIListener)listener).enterIrelative_part(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExtractedIRIListener ) ((ExtractedIRIListener)listener).exitIrelative_part(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExtractedIRIVisitor ) return ((ExtractedIRIVisitor<? extends T>)visitor).visitIrelative_part(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Irelative_partContext irelative_part() throws RecognitionException {
		Irelative_partContext _localctx = new Irelative_partContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_irelative_part);
		try {
			setState(134);
			switch (_input.LA(1)) {
			case FSLASH2:
				enterOuterAlt(_localctx, 1);
				{
				setState(127); match(FSLASH2);
				setState(128); iauthority();
				setState(129); ipath_abempty();
				}
				break;
			case FSLASH:
				enterOuterAlt(_localctx, 2);
				{
				setState(131); ipath_absolute();
				}
				break;
			case UCSCHAR:
			case D0:
			case D1:
			case D2:
			case D3:
			case D4:
			case D5:
			case D6:
			case D7:
			case D8:
			case D9:
			case A:
			case B:
			case C:
			case D:
			case E:
			case F:
			case G:
			case H:
			case I:
			case J:
			case K:
			case L:
			case M:
			case N:
			case O:
			case P:
			case Q:
			case R:
			case S:
			case T:
			case U:
			case V:
			case W:
			case X:
			case Y:
			case Z:
			case DOT:
			case PERCENT:
			case HYPHEN:
			case TILDE:
			case USCORE:
			case EXCL:
			case DOLLAR:
			case AMP:
			case SQUOTE:
			case OPAREN:
			case CPAREN:
			case STAR:
			case PLUS:
			case COMMA:
			case SCOL:
			case EQUALS:
			case AT:
				enterOuterAlt(_localctx, 3);
				{
				setState(132); ipath_noscheme();
				}
				break;
			case EOF:
			case QMARK:
			case HASH:
				enterOuterAlt(_localctx, 4);
				{
				setState(133); ipath_empty();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IauthorityContext extends ParserRuleContext {
		public PortContext port() {
			return getRuleContext(PortContext.class,0);
		}
		public IuserinfoContext iuserinfo() {
			return getRuleContext(IuserinfoContext.class,0);
		}
		public IhostContext ihost() {
			return getRuleContext(IhostContext.class,0);
		}
		public IauthorityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_iauthority; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExtractedIRIListener ) ((ExtractedIRIListener)listener).enterIauthority(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExtractedIRIListener ) ((ExtractedIRIListener)listener).exitIauthority(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExtractedIRIVisitor ) return ((ExtractedIRIVisitor<? extends T>)visitor).visitIauthority(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IauthorityContext iauthority() throws RecognitionException {
		IauthorityContext _localctx = new IauthorityContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_iauthority);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(136); iuserinfo();
				setState(137); match(AT);
				}
				break;
			}
			setState(141); ihost();
			setState(144);
			_la = _input.LA(1);
			if (_la==COL) {
				{
				setState(142); match(COL);
				setState(143); port();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IuserinfoContext extends ParserRuleContext {
		public List<IunreservedContext> iunreserved() {
			return getRuleContexts(IunreservedContext.class);
		}
		public List<Pct_encodedContext> pct_encoded() {
			return getRuleContexts(Pct_encodedContext.class);
		}
		public IunreservedContext iunreserved(int i) {
			return getRuleContext(IunreservedContext.class,i);
		}
		public Sub_delimsContext sub_delims(int i) {
			return getRuleContext(Sub_delimsContext.class,i);
		}
		public Pct_encodedContext pct_encoded(int i) {
			return getRuleContext(Pct_encodedContext.class,i);
		}
		public List<Sub_delimsContext> sub_delims() {
			return getRuleContexts(Sub_delimsContext.class);
		}
		public IuserinfoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_iuserinfo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExtractedIRIListener ) ((ExtractedIRIListener)listener).enterIuserinfo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExtractedIRIListener ) ((ExtractedIRIListener)listener).exitIuserinfo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExtractedIRIVisitor ) return ((ExtractedIRIVisitor<? extends T>)visitor).visitIuserinfo(this);
			else return visitor.visitChildren(this);
		}
	}
